<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RSR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Login success!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_success">Success</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Signup</string>
    <string name="esPassword">Comfirm password</string>
    <string name="email">E-Mail</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Enter your email address</string>

    <color name="white">#FFFFFF</color>
    <color name="yellow">#FFFF00</color>
    <color name="fuchsia">#FF00FF</color>
    <color name="red">#FF0000</color>
    <color name="silver">#C0C0C0</color>
    <color name="gray">#808080</color>
    <color name="olive">#808000</color>
    <color name="purple">#800080</color>
    <color name="maroon">#800000</color>
    <color name="aqua">#00FFFF</color>
    <color name="lime">#00FF00</color>
    <color name="teal">#008080</color>
    <color name="green">#008000</color>
    <color name="blue">#0000FF</color>
    <color name="navy">#000080</color>
    <color name="black">#000000</color>
    <color name="transparentBackground">#CCe5e5e5</color>
    <color name="orangeText">#ff8a00</color>
    <color name="androidBlue">#22C6FC</color>

    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_defence">DefenceActivity</string>
    <string name="title_activity_equipment">EquipmentActivity</string>
    <string name="title_activity_existing_course">Existing_courseActivity</string>
    <string name="title_activity_attack_course_list">AttackCourseListActivity</string>
    <string name="title_activity_attack">AttackActivity</string>

</resources>
