<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="@color/white"  >

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_above="@+id/password" >

    </EditText>
    
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="10dp"
        android:autoLink="none"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:freezesText="true"
        android:longClickable="true"
        android:onClick="resetPassword"
        android:text="Forgot your password?" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:src="@drawable/templogo"
        android:layout_marginBottom="20dp" />

   <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal"
        android:layout_above="@+id/linearLayout1"/>
   
   <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >
        
        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fitsSystemWindows="true"
            android:onClick="login"
            android:text="@string/login"
            android:visibility="visible"
            android:background="?android:attr/selectableItemBackground" />
        
        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fitsSystemWindows="true"
            android:onClick="signup"
            android:text="@string/signup"
            android:visibility="visible"
            android:background="?android:attr/selectableItemBackground" />
        	
    </LinearLayout>

</RelativeLayout>

